tests/ui/errors/snapshots/infer_struct_literal_field_typo_claims_missing_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Member not found
   ╭─[test.lis:5:11]
 4 │ fn test() -> string {
 5 │   let u = User { nam: "ada", age: 36 }
   ·           ──────────────┬─────────────
   ·                         ╰── no member `nam` on type `User`
 6 │   u.name
   ╰────
  help: Did you mean `name`? · code: [infer.member_not_found]
