tests/ui/errors/snapshots/infer_struct_member_not_found_with_suggestion.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Member not found
   ╭─[test.lis:6:3]
 5 │   let p = Point { x: 1, y: 2 };
 6 │   p.yy
   ·   ──┬─
   ·     ╰── no member `yy` on type `Point`
 7 │ }
   ╰────
  help: Did you mean `y`? · code: [infer.member_not_found]
