tests/ui/errors/snapshots/infer_struct_not_found.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Struct not found
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let p = UnknownStruct { x: 1, y: 2 };
   ·           ──────┬──────
   ·                 ╰── not declared or imported
 4 │ }
   ╰────
  help: Define or import this struct · code: [resolve.struct_not_found]
