tests/ui/errors/snapshots/infer_struct_shadows_predeclared_comparable.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Cannot shadow Go predeclared identifier
   ╭─[test.lis:2:8]
 1 │ 
 2 │ struct comparable {}
   ·        ─────┬────
   ·             ╰── `comparable` is a Go predeclared identifier
 3 │ 
   ╰────
  help: Lisette emits `comparable` directly in the generated Go, so a user declaration with this name shadows the builtin and the output fails to compile. Choose a different name · code: [infer.predeclared_type_shadowed]
